@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-17T08:13:08Z",
+  "timestamp" : "2022-05-17T16:18:25Z",
   "count_outdated" : 65,
   "uniques_outdated" : 4,
-  "count" : 361,
+  "count" : 365,
   "uniques" : 16,
   "views" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
+      "count": 15,
+      "count_minmax": [ 11, 15 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
