@@ -1,3 +1,10 @@
+2022-05-17T16:18:25Z:
+* notice: last 14d: all unq: 300 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 65 4 / 361 16
+* notice: next accum: outdated-all outdated-unq / all unq: 65 4 / 365 16
+* notice: prev exec diff / last date diff / accum: unq all: +0 +4 -0 -0 / +1 +15 -0 -0 / 1 15
+* notice: changed dates: [2022-05-16 2022-05-17]
+
 2022-05-17T08:13:08Z:
 * notice: last 14d: all unq: 296 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 65 4 / 350 15
